tests/parser_cases/invalid/if_missing_end.ob0
(* INVALID: IF block is missing its closing END *)
MODULE Main;
BEGIN
  IF 1 THEN
    WriteInt(1)
END Main.
